fix: z-index

--- a/src/components/temporal-popup/css/core.css
+++ b/src/components/temporal-popup/css/core.css
@@ -41,7 +41,6 @@
   --color-border-locked: var(--tp-popup-color-border-locked, #f9f9f9);
   --day-width: var(--tp-popup-day-width, 43px);
   --day-height: var(--tp-popup-day-height, 37px);
-  --z-index: var(--tp-popup-z-index, 40);
   --border-radius: var(--tp-popup-border-radius, 2px);
   --primary-color: var(--tp-popup-primary-color, #2e6fda);
   --secondary-color: var(--tp-popup-secondary-color, #64748b);
@@ -59,7 +58,6 @@
   font-size: 0.8em;
   overflow: hidden;
   pointer-events: all;
-  z-index: var(--z-index);
   box-shadow: var(--box-shadow);
   display: block;
 }
